add some changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="twitter:description" content="Front-End Web Developer" />
+    <meta name="author" content="Valency Dickson" />
+    <meta name="description" content="Front-End Web Developer" />
     <title>Valency Dickson</title>
 
     <!-- Favicon -->
@@ -127,7 +128,7 @@
             <span class="d"><span>D</span>ickson</span>
           </h1>
           <p class="ml3">
-            A front-end developer based in Dar es Salaam, Tanzania.
+            A Front-End developer based in Dar es Salaam, Tanzania.
           </p>
           <a href="#contacts" role="button" class="btn cta">Contact me</a>
         </div>
@@ -181,8 +182,10 @@
               key to success.
             </p>
 
-            <p>You can ready my CV in the PDF attached below.</p>
-            <a href="cv/Web Dev CV.docx" download="">My CV (pdf 150kb)</a>
+            <p>You can ready my Resume in the PDF attached below.</p>
+            <a href="cv/Front-End Dev Resume.pdf" download=""
+              >My Resume (pdf 15kb)</a
+            >
           </div>
         </div>
       </section>
