--- a/index.html
+++ b/index.html
@@ -158,11 +158,7 @@
           data-aos-easing="linear"
           data-aos-duration="1000"
         >
-          <img
-            src="images/profile-pic-min.png"
-            loading="lazy"
-            alt="profile-pic"
-          />
+          <img src="images/profile-pic-min.png" alt="profile-pic" />
           <div class="about-texts">
             <h4>Who's this guy?</h4>
             <p>
@@ -308,6 +304,34 @@
           data-aos-easing="linear"
           data-aos-duration="1000"
         >
+          <div class="project-card">
+            <img src="images/rest-country-api.png" alt="landing-page" />
+            <div class="project-description">
+              <h4>REST Countries Api</h4>
+              <p>ReactJs | Redux | Bootstrap</p>
+              <a
+                href="https://github.com/valencydickson/rest-countries-api"
+                role="button"
+                class="btn project-btn code-btn"
+                target="_blank"
+                ><span>
+                  <i class="fab fa-github"></i>
+                </span>
+                Source code</a
+              >
+              <a
+                href="https://rest-countries-api-gray-nine.vercel.app/"
+                role="button"
+                class="btn project-btn site-btn"
+                target="_blank"
+                ><span>
+                  <i class="fas fa-eye"></i>
+                </span>
+                Visit site</a
+              >
+            </div>
+          </div>
+
           <div class="project-card">
             <img src="images/Easy-bank-min.png" alt="landing-page" />
             <div class="project-description">
