--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
             </p>
 
             <p>You can ready my Resume in the PDF attached below.</p>
-            <a href="cv/Front-End Dev Resume.pdf" download=""
-              >My Resume (pdf 15kb)</a
+            <a href="cv/UPDATED VALENCY DICKSON CV.pdf" download=""
+              >My Resume (pdf 16kb)</a
             >
           </div>
         </div>
