--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <nav class="navigation">
           <ul>
             <li>
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li>
               <a class="nav-link" href="#about">About</a>
@@ -62,6 +62,14 @@
             </li>
           </ul>
         </nav>
+
+        <!-- Contacts -->
+        <div class="personal-contacts">
+          <a href="mailto:dickson.valency@gmail.com"
+            >dickson.valency@gmail.com</a
+          >
+          <a href="tel:+255788035718">(+255) 788 035 718</a>
+        </div>
 
         <!-- Navigation -->
         <button class="sidebar-toggler">
@@ -94,6 +102,12 @@
           </nav>
 
           <!-- social media -->
+          <div class="personal-contacts-sidebar">
+            <a href="mailto:dickson.valency@gmail.com"
+              >dickson.valency@gmail.com</a
+            >
+            <a href="tel:+255788035718">(+255) 788 035 718</a>
+          </div>
           <ul class="social-icons">
             <li>
               <a
