--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
       type="image/x-icon"
     />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4RNQ6DK61G"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-4RNQ6DK61G");
+    </script>
+
     <!-- AOS JS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
