--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Valency Dickson" />
-    <meta name="description" content="Front-End Web Developer" />
+    <meta name="description" content="Web Developer" />
     <title>Valency Dickson</title>
 
     <!-- Favicon -->
@@ -57,7 +57,7 @@
     <!-- HEADER -->
     <header id="header">
       <div class="navbar">
-        <a href="index.html" class="logo">
+        <a href="/" class="logo">
           <img src="images/logo.svg" alt="logo" />
         </a>
 
@@ -83,7 +83,6 @@
           <a href="mailto:dickson.valency@gmail.com"
             >dickson.valency@gmail.com</a
           >
-          <a href="tel:+255788035718">(+255) 788 035 718</a>
         </div>
 
         <!-- Navigation -->
@@ -121,7 +120,6 @@
             <a href="mailto:dickson.valency@gmail.com"
               >dickson.valency@gmail.com</a
             >
-            <a href="tel:+255788035718">(+255) 788 035 718</a>
           </div>
           <ul class="social-icons">
             <li>
@@ -157,9 +155,9 @@
             <span class="d"><span>D</span>ickson</span>
           </h1>
           <p class="ml3">
-            A Front-End developer based in Dar es Salaam, Tanzania.
+            I build websites and web apps using modern web technilogies.
           </p>
-          <a href="#contacts" role="button" class="btn cta">Contact me</a>
+          <a href="#contacts" role="button" class="btn cta">Get in Touch</a>
         </div>
         <div class="landing-img">
           <img src="images/bgpic-min.png" alt="bgpic" />
@@ -177,7 +175,7 @@
           data-aos-easing="linear"
           data-aos-duration="1000"
         >
-          <h2>About</h2>
+          <h2>About Me</h2>
           <hr />
         </div>
 
@@ -191,8 +189,8 @@
           <div class="about-texts">
             <h4>Who's this guy?</h4>
             <p>
-              Hi, I’m a self taught web developer, I have serious passion for
-              website and web app design and development.
+              I’m a web developer based in Dar es Salaam, Tanzania. I have
+              serious passion for website and web app design and development.
             </p>
 
             <p>
@@ -207,7 +205,7 @@
               key to success.
             </p>
 
-            <p>You can ready my Resume in the PDF attached below.</p>
+            <p>You can ready my resume in the PDF attached below.</p>
             <a href="cv/UPDATED VALENCY DICKSON CV.pdf" download=""
               >My Resume (pdf 16kb)</a
             >
@@ -259,6 +257,10 @@
 
           <div class="line line7">
             <h4>WordPress</h4>
+          </div>
+
+          <div class="line line10">
+            <h4>PHP</h4>
           </div>
 
           <div class="line line8">
@@ -334,6 +336,52 @@
           data-aos-duration="1000"
         >
           <div class="project-card">
+            <img src="images/Farus.png" alt="African Repatriation" />
+            <div class="project-description">
+              <h4>African Repatriation website</h4>
+              <p>Wordpress</p>
+              <a
+                href="https://africanrepatriation.org/"
+                role="button"
+                class="btn project-btn site-btn"
+                target="_blank"
+                ><span>
+                  <i class="fas fa-eye"></i>
+                </span>
+                Visit site</a
+              >
+            </div>
+          </div>
+
+          <div class="project-card">
+            <img src="images/calculator_PS.png" alt="landing-page" />
+            <div class="project-description">
+              <h4>Calculator App</h4>
+              <p>Vanilla JavaScript</p>
+              <a
+                href="https://github.com/valencydickson/calculator-app"
+                role="button"
+                class="btn project-btn code-btn"
+                target="_blank"
+                ><span>
+                  <i class="fab fa-github"></i>
+                </span>
+                Source code</a
+              >
+              <a
+                href="https://calculator-app-jet-zeta.vercel.app/"
+                role="button"
+                class="btn project-btn site-btn"
+                target="_blank"
+                ><span>
+                  <i class="fas fa-eye"></i>
+                </span>
+                Visit site</a
+              >
+            </div>
+          </div>
+
+          <div class="project-card">
             <img src="images/rest-country-api.png" alt="landing-page" />
             <div class="project-description">
               <h4>REST Countries Api</h4>
@@ -350,34 +398,6 @@
               >
               <a
                 href="https://rest-countries-api-gray-nine.vercel.app/"
-                role="button"
-                class="btn project-btn site-btn"
-                target="_blank"
-                ><span>
-                  <i class="fas fa-eye"></i>
-                </span>
-                Visit site</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="images/Easy-bank-min.png" alt="landing-page" />
-            <div class="project-description">
-              <h4>Easy Bank</h4>
-              <p>JavaScript</p>
-              <a
-                href="https://github.com/valencydickson/Easy-Bank"
-                role="button"
-                class="btn project-btn code-btn"
-                target="_blank"
-                ><span>
-                  <i class="fab fa-github"></i>
-                </span>
-                Source code</a
-              >
-              <a
-                href="https://easy-bank-plum.vercel.app/"
                 role="button"
                 class="btn project-btn site-btn"
                 target="_blank"
@@ -449,12 +469,12 @@
           </div>
 
           <div class="project-card">
-            <img src="images/loopstudio-min.png" alt="landing-page" />
+            <img src="images/Easy-bank-min.png" alt="landing-page" />
             <div class="project-description">
-              <h4>Loopstudios</h4>
-              <p>Bootstrap | jQuery</p>
+              <h4>Easy Bank</h4>
+              <p>Vanilla JavaScript</p>
               <a
-                href="https://github.com/valencydickson/Loopstudios"
+                href="https://github.com/valencydickson/Easy-Bank"
                 role="button"
                 class="btn project-btn code-btn"
                 target="_blank"
@@ -464,7 +484,7 @@
                 Source code</a
               >
               <a
-                href="https://loopstudios-valencydickson.vercel.app/"
+                href="https://easy-bank-plum.vercel.app/"
                 role="button"
                 class="btn project-btn site-btn"
                 target="_blank"
@@ -555,7 +575,7 @@
         </div>
 
         <div class="copyright">
-          <p class="ml-auto">VALENCY DICKSON <span>©2020</span></p>
+          <p class="ml-auto">VALENCY DICKSON <span class="year">©2020</span></p>
         </div>
       </div>
     </footer>
