--- a/index.html
+++ b/index.html
@@ -339,7 +339,12 @@
             <img src="images/Farus.png" alt="African Repatriation" />
             <div class="project-description">
               <h4>African Repatriation website</h4>
-              <p>Wordpress</p>
+              <p>
+                A foundation website that seeks to advance and facilitate mutual
+                agenda of holistic freedom and prosperity for entire African
+                family.
+              </p>
+              <p class="project-tools">Wordpress</p>
               <a
                 href="https://africanrepatriation.org/"
                 role="button"
@@ -357,7 +362,12 @@
             <img src="images/calculator_PS.png" alt="landing-page" />
             <div class="project-description">
               <h4>Calculator App</h4>
-              <p>Vanilla JavaScript</p>
+              <p>
+                A web app for making simple calculations. User can perform
+                mathematical operations like addition, subtraction,
+                multiplication, and division.
+              </p>
+              <p class="project-tools">JavaScript</p>
               <a
                 href="https://github.com/valencydickson/calculator-app"
                 role="button"
@@ -384,8 +394,14 @@
           <div class="project-card">
             <img src="images/rest-country-api.png" alt="landing-page" />
             <div class="project-description">
-              <h4>REST Countries Api</h4>
-              <p>ReactJs | Redux | Bootstrap</p>
+              <h4>REST Countries API</h4>
+              <p>
+                A web app that uses REST Countries API to pull country data.
+                User can See all countries from the API on the homepage, Search
+                for a country using an input field, Filter countries by region.
+              </p>
+              <p class="project-tools">ReactJs | Redux | Bootstrap</p>
+
               <a
                 href="https://github.com/valencydickson/rest-countries-api"
                 role="button"
@@ -416,7 +432,13 @@
             />
             <div class="project-description">
               <h4>Rock Paper Scissors</h4>
-              <p>Bootstrap | jQuery</p>
+
+              <p>
+                It is a game played between user and computer. User can
+                maintains the state of the score after refreshing the browser.
+              </p>
+              <p class="project-tools">jQuery | Bootstrap</p>
+
               <a
                 href="https://github.com/valencydickson/Rock-Paper-Scissors"
                 role="button"
@@ -444,7 +466,11 @@
             <img src="images/todo-min-1.png" alt="todo-app" />
             <div class="project-description">
               <h4>Todo App</h4>
-              <p>React.js</p>
+              <p>
+                A web app for adding to-do in a list. User can mark to-do as
+                completed, delete to-do in a list.
+              </p>
+              <p class="project-tools">ReactJs</p>
               <a
                 href="https://github.com/valencydickson/Todo-App"
                 role="button"
@@ -517,8 +543,15 @@
           data-aos-duration="1000"
         >
           <h4>Do you have a question or want to work together?</h4>
-          <p class="contacts-para">LET'S TALK</p>
-          <form action="" class="contacts-form">
+
+          <a
+            href="mailto:dickson.valency@gmail.com"
+            target="_blank"
+            role="button"
+            class="btn cta"
+            >Get in Touch</a
+          >
+          <!-- <form action="" class="contacts-form">
             <input type="text" placeholder="Name*" class="name" required />
             <input type="email" placeholder="Email*" class="email" required />
             <textarea
@@ -530,7 +563,7 @@
             ></textarea>
             <div class="mail-message"></div>
             <button type="submit" class="btn-submit btn">Submit</button>
-          </form>
+          </form> -->
         </div>
       </section>
     </main>
