--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <span class="d"><span>D</span>ickson</span>
           </h1>
           <p class="ml3">
-            I build websites and web apps using modern web technilogies.
+            I build websites and web apps using modern web technologies.
           </p>
           <a href="#contacts" role="button" class="btn cta">Get in Touch</a>
         </div>
@@ -206,8 +206,8 @@
             </p>
 
             <p>You can ready my resume in the PDF attached below.</p>
-            <a href="cv/UPDATED VALENCY DICKSON CV.pdf" download=""
-              >My Resume (pdf 16kb)</a
+            <a href="cv/VALENCY DICKSON.pdf" download=""
+              >My Resume (pdf 32kb)</a
             >
           </div>
         </div>
