--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
             <h4>PHP</h4>
           </div>
 
+          <div class="line line11">
+            <h4>MySql</h4>
+          </div>
+
           <div class="line line8">
             <h4>Git/GitHub</h4>
           </div>
@@ -335,6 +339,28 @@
           data-aos-easing="linear"
           data-aos-duration="1000"
         >
+          <div class="project-card">
+            <img src="images/LWAES.png" alt="LWAES" />
+            <div class="project-description">
+              <h4>Legit Writing and Editorial Services</h4>
+              <p>
+                LWAES is a fully fledged research, professional writing and
+                editorial service firm based in Tanzania.
+              </p>
+              <p class="project-tools">Wordpress</p>
+              <a
+                href="https://legitwriterstz.com/"
+                role="button"
+                class="btn project-btn site-btn"
+                target="_blank"
+                ><span>
+                  <i class="fas fa-eye"></i>
+                </span>
+                Visit site</a
+              >
+            </div>
+          </div>
+
           <div class="project-card">
             <img src="images/Farus.png" alt="African Repatriation" />
             <div class="project-description">
@@ -483,34 +509,6 @@
               >
               <a
                 href="https://todo-app-lovat-one.vercel.app/"
-                role="button"
-                class="btn project-btn site-btn"
-                target="_blank"
-                ><span>
-                  <i class="fas fa-eye"></i>
-                </span>
-                Visit site</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="images/Easy-bank-min.png" alt="landing-page" />
-            <div class="project-description">
-              <h4>Easy Bank</h4>
-              <p>Vanilla JavaScript</p>
-              <a
-                href="https://github.com/valencydickson/Easy-Bank"
-                role="button"
-                class="btn project-btn code-btn"
-                target="_blank"
-                ><span>
-                  <i class="fab fa-github"></i>
-                </span>
-                Source code</a
-              >
-              <a
-                href="https://easy-bank-plum.vercel.app/"
                 role="button"
                 class="btn project-btn site-btn"
                 target="_blank"
