--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       gtag("config", "G-4RNQ6DK61G");
     </script>
 
+    <meta
+      name="google-site-verification"
+      content="SMFGt-_4YTMwhJySlSt458NBpZhZPG6j_fWSzCzSRP4"
+    />
+
     <!-- AOS JS -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
