update latest projects

--- a/index.html
+++ b/index.html
@@ -345,6 +345,40 @@
           data-aos-duration="1000"
         >
           <div class="project-card">
+            <img src="images/todo-php.png" alt="LWAES" />
+            <div class="project-description">
+              <h4>Legit Writing and Editorial Services</h4>
+              <p>
+                A web app for adding to-do in a list. User can mark to-do as
+                completed, delete to-do in a list, Clear all completed todos and
+                toggle light and dark mode
+              </p>
+              <p class="project-tools">JavaScript | Bootstrap | PHP | MySQL</p>
+
+              <a
+                href="https://github.com/valencydickson/Todo-App-php"
+                role="button"
+                class="btn project-btn code-btn"
+                target="_blank"
+                ><span>
+                  <i class="fab fa-github"></i>
+                </span>
+                Source code</a
+              >
+              <a
+                href="https://todo-valency.herokuapp.com/"
+                role="button"
+                class="btn project-btn site-btn"
+                target="_blank"
+                ><span>
+                  <i class="fas fa-eye"></i>
+                </span>
+                Visit site</a
+              >
+            </div>
+          </div>
+
+          <div class="project-card">
             <img src="images/LWAES.png" alt="LWAES" />
             <div class="project-description">
               <h4>Legit Writing and Editorial Services</h4>
@@ -482,38 +516,6 @@
               >
               <a
                 href="https://rock-paper-scissors-ten-coral.vercel.app/"
-                role="button"
-                class="btn project-btn site-btn"
-                target="_blank"
-                ><span>
-                  <i class="fas fa-eye"></i>
-                </span>
-                Visit site</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img src="images/todo-min-1.png" alt="todo-app" />
-            <div class="project-description">
-              <h4>Todo App</h4>
-              <p>
-                A web app for adding to-do in a list. User can mark to-do as
-                completed, delete to-do in a list.
-              </p>
-              <p class="project-tools">ReactJs</p>
-              <a
-                href="https://github.com/valencydickson/Todo-App"
-                role="button"
-                class="btn project-btn code-btn"
-                target="_blank"
-                ><span>
-                  <i class="fab fa-github"></i>
-                </span>
-                Source code</a
-              >
-              <a
-                href="https://todo-app-lovat-one.vercel.app/"
                 role="button"
                 class="btn project-btn site-btn"
                 target="_blank"
