--- a/index.html
+++ b/index.html
@@ -345,13 +345,46 @@
           data-aos-duration="1000"
         >
           <div class="project-card">
+            <img src="images/register.png" alt="LWAES" />
+            <div class="project-description">
+              <h4>Login System</h4>
+              <p>
+                Users should be able to register in the system, login to the
+                system using their username/email and password and Access
+                profile page only after login.
+              </p>
+              <p class="project-tools">Bootstrap | PHP | MySQL</p>
+
+              <a
+                href="https://github.com/valencydickson/login-system"
+                role="button"
+                class="btn project-btn code-btn"
+                target="_blank"
+                ><span>
+                  <i class="fab fa-github"></i>
+                </span>
+                Source code</a
+              >
+              <a
+                href="https://login-system-php-valency.herokuapp.com/"
+                role="button"
+                class="btn project-btn site-btn"
+                target="_blank"
+                ><span>
+                  <i class="fas fa-eye"></i>
+                </span>
+                Visit site</a
+              >
+            </div>
+          </div>
+
+          <div class="project-card">
             <img src="images/todo-php.png" alt="LWAES" />
             <div class="project-description">
-              <h4>Legit Writing and Editorial Services</h4>
+              <h4>Todo-App-php</h4>
               <p>
                 A web app for adding to-do in a list. User can mark to-do as
-                completed, delete to-do in a list, Clear all completed todos and
-                toggle light and dark mode
+                completed, delete to-do in a list, Clear all completed todos.
               </p>
               <p class="project-tools">JavaScript | Bootstrap | PHP | MySQL</p>
 
@@ -479,43 +512,6 @@
               >
               <a
                 href="https://rest-countries-api-gray-nine.vercel.app/"
-                role="button"
-                class="btn project-btn site-btn"
-                target="_blank"
-                ><span>
-                  <i class="fas fa-eye"></i>
-                </span>
-                Visit site</a
-              >
-            </div>
-          </div>
-
-          <div class="project-card">
-            <img
-              src="images/rock-paper-scissors-min-1.png"
-              alt="landing-page"
-            />
-            <div class="project-description">
-              <h4>Rock Paper Scissors</h4>
-
-              <p>
-                It is a game played between user and computer. User can
-                maintains the state of the score after refreshing the browser.
-              </p>
-              <p class="project-tools">jQuery | Bootstrap</p>
-
-              <a
-                href="https://github.com/valencydickson/Rock-Paper-Scissors"
-                role="button"
-                class="btn project-btn code-btn"
-                target="_blank"
-                ><span>
-                  <i class="fab fa-github"></i>
-                </span>
-                Source code</a
-              >
-              <a
-                href="https://rock-paper-scissors-ten-coral.vercel.app/"
                 role="button"
                 class="btn project-btn site-btn"
                 target="_blank"
