--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </p>
 
             <p>You can ready my resume in the PDF attached below.</p>
-            <a href="cv/Valency Dickson Resume.pdf" download=""
+            <a href="cv/Valency Dickson resume.pdf" download=""
               >My Resume (pdf 230kb)</a
             >
           </div>
