--- a/index.html
+++ b/index.html
@@ -158,72 +158,56 @@
       </div>
 
       <div class="about-content" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
-        <img src="images/profile-pic-min.png" alt="profile-pic" />
-        <div class="about-texts">
-          <h4>Who's this guy?</h4>
-          <p>
-            I’m a web developer based in Dar es Salaam, Tanzania. I have
-            serious passion for website and web app design and development.
-          </p>
-
-          <p>
-            I'm always open to learn and try something new in web development.
-            I’m a fast learner, able to pick up new skills and juggle
-            different projects and roles.
-          </p>
-
-          <p>
-            I consider myself a person who is trustworthy, responsible,
-            respects deadlines and knows that customer’s satisfaction is the
-            key to success.
-          </p>
-
-          <p>You can ready my resume in the PDF attached below.</p>
-          <a href="cv/Valency Dickson resume.pdf" download="">My Resume (pdf 230kb)</a>
-        </div>
-      </div>
-    </section>
-
-    <!-- Skills Section -->
-
-    <section class="skills container">
-      <div class="section-header" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000">
-        <h2>My Skills</h2>
-        <hr />
-      </div>
-      <div class="skills-bar" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="1000">
         <div>
-          <h4>Front-end</h4>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Bootstrap</li>
-            <li>Tailwind</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>ReactJs</li>
-          </ul>
+          <img src="images/profile-pic-min.png" alt="profile-pic" />
+        </div>
+        <div class="about-profile">
+          <div class="about-texts">
+            <h4>Who's this guy?</h4>
+            <p>
+              I’m a web developer based in Dar es Salaam, Tanzania. I have
+              serious passion for website and web app design and development.
+            </p>
+
+            <p style="margin-bottom: 0.5em;">You can ready my resume in the PDF attached below.</p>
+            <a href="cv/Valency Dickson resume.pdf" download="">My Resume (pdf 230kb)</a>
+          </div>
+          <div class="skills-content">
+            <h4>My Skills</h4>
+            <ul class="skills-list">
+              <li>HTML</li>
+              <li>CSS</li>
+
+              <li>JavaScript</li>
+
+              <li>ReactJs</li>
+              <li>PHP</li>
+              <li>Laravel</li>
+              <li>SQL</li>
+              <li>Wordpress</li>
+              <li>Wix</li>
+            </ul>
+            <table class="skills-table">
+              <tr>
+                <th>HTML</th>
+                <th>CSS</th>
+                <th>JavaScript</th>
+              </tr>
+              <tr>
+                <th>ReactJs</th>
+                <th>PHP</th>
+                <th>Laravel</th>
+              </tr>
+              <tr>
+                <th>SQL</th>
+                <th>WordPress</th>
+                <th>Wix</th>
+              </tr>
+            </table>
+          </div>
         </div>
 
-        <div>
-          <h4>Back-end</h4>
-          <ul>
-            <li>PHP</li>
-            <li>SQL</li>
-            <li>Apache</li>
-          </ul>
-        </div>
 
-        <div>
-          <h4>Tools/Software</h4>
-          <ul>
-            <li>Wordpress</li>
-            <li>Wix</li>
-            <li>Adobe Illustrator</li>
-            <li>Adobe Photoshop</li>
-            <li>Git/GitHub</li>
-          </ul>
-        </div>
       </div>
     </section>
 
