Add skills on section

--- a/index.html
+++ b/index.html
@@ -174,19 +174,6 @@
           </div>
           <div class="skills-content">
             <h4>My Skills</h4>
-            <ul class="skills-list">
-              <li>HTML</li>
-              <li>CSS</li>
-
-              <li>JavaScript</li>
-
-              <li>ReactJs</li>
-              <li>PHP</li>
-              <li>Laravel</li>
-              <li>SQL</li>
-              <li>Wordpress</li>
-              <li>Wix</li>
-            </ul>
             <table class="skills-table">
               <tr>
                 <th>HTML</th>
@@ -194,14 +181,19 @@
                 <th>JavaScript</th>
               </tr>
               <tr>
+                <th>jQuery</th>
                 <th>ReactJs</th>
-                <th>PHP</th>
                 <th>Laravel</th>
               </tr>
               <tr>
-                <th>SQL</th>
+                <th>PHP</th>
+                <th>MySQL</th>
+                <th>Apache</th>
+              </tr>
+              <tr>
                 <th>WordPress</th>
                 <th>Wix</th>
+                <th>GitHub</th>
               </tr>
             </table>
           </div>
