remove unused js

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
       </div>
 
       <div class="copyright">
-        <p class="ml-auto">VALENCY DICKSON <span class="year">©2020</span></p>
+        <p class="ml-auto">VALENCY DICKSON <span class="year"></span></p>
       </div>
     </div>
   </footer>
@@ -468,7 +468,8 @@
   </script>
 
   <!-- jQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
   <!-- Main Js -->
   <script src="js/index.js"></script>
