--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               serious passion for website and web app design and development.
             </p>
 
-            <p style="margin-bottom: 0.5em;">You can ready my resume in the PDF attached below.</p>
+            <p style="margin-bottom: 0.5em;">You can read my resume in the PDF attached below.</p>
             <a href="cv/Valency Dickson resume.pdf" download="">My Resume (pdf 230kb)</a>
           </div>
           <div class="skills-content">
